--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
     height: 50px;
     width: 50px;
 }
+
+.mosquito2 {
+    height: 75px;
+    width: 75px;
+}
+
+.mosquito3 {
+    height: 100px;
+    width: 100px;
+}
