Criando background e as classes do painel de controle do jogo

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+    background: url(./imagens/bg.jpg) no-repeat;
+}
+
 .mosquito1 {
     height: 50px;
     width: 50px;
@@ -19,4 +23,25 @@
 
 .ladoB {
     transform: scaleX(-1);
+}
+
+.painel {
+    position: absolute;
+    width: 190px;
+    padding: 10px;
+    left: 0px;
+    bottom: 0px;
+    border-top: solid 1px #ffffff;
+    background-color: #ffffff;
+    opacity: 0.7;
+}
+
+.vidas {
+    float: left;
+}
+
+.cronometro {
+    float: left;
+    font-size: 20px;
+    font-weight: 700;
 }
