--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 body {
     background: url(./imagens/bg.jpg) no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 .mosquito1 {
