--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+    cursor: url(./imagens/mata_mosca.png) 30 30, auto;
+}
+
 body {
     background: url(./imagens/bg.jpg) no-repeat;
     -webkit-background-size: cover;
